fix wrapping in tabs

--- a/css/style.css
+++ b/css/style.css
@@ -69,4 +69,7 @@ h2:has(.listing-summary-title) {
     padding-top: 0.5cm;
     padding-bottom: 0;
 }
+
+.flex-row {
+  flex-wrap: wrap;
 }
